--- a/src/main/resources/data/projects.json
+++ b/src/main/resources/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "title":"Personal Website: front-end",
+    "title":"Personal website: front-end",
     "shortDescription":"The website you are currently visiting that showcases my knowledge and experiences",
     "description":"This website, based on React and Typescript, deployed using AWS amplify. It is meant to showcase my capabilities as a software developer. New features and capabilities will be added based on feedback and new knowledge, following an agile filosophy of constant development.",
     "imageUrl":"/images/website-cover.png",
@@ -16,7 +16,7 @@
   },
   {
     "id": 2,
-    "title":"Personal Website: back-end",
+    "title":"Personal website: back-end",
     "shortDescription":"Back-end developed to support my personal website",
     "description":"This project, currently based on Java Spring Boot, provides the information presented on this website dynamically, allowing for the impelementaion of admin capabilities such as inserting new information without redeploying the web application.",
     "imageUrl":"/images/personal-website-backend-cover.png",
@@ -39,7 +39,7 @@
   },
   {
     "id": 4,
-    "title":"Cycle Touring Bike",
+    "title":"Cycle-touring bike",
     "shortDescription":"Presented as capstone project as part of my Mechanical Engineering program is the first contact with a full product development life cycle",
     "description":"This project was the development of a cycle touring bike adapted to brazilian reality, and started with in depth review of the subject and requirements gathering with users. It ended with a functional prototype built to validate the solution proposed. As we progressed throught this project we face many obstacles such as difficulty to find enough users to provide requirements, time and resources contraint. Methodologies applied on this project to circunvent this project have been successfuly applied through my carreer to develop software with adaptations to the agile principles. The project was presented with a valuation of 9.5 out of 10",
     "imageUrl":"/images/bike-cover.jpg",
