--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=personal-website
 
 server.servlet.context-path=/v1
+
+spring.data.mongodb.uri=mongodb://localhost:27017/personalWebsite
