--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.3.2'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
+	implementation 'io.awspring.cloud:spring-cloud-aws-starter-secrets-manager:3.1.1'
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
