--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.3.2'
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-secrets-manager:3.1.1'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.3'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
