--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=personal-website
 server.servlet.context-path=/v1
 aws.region=ca-central-1
-spring.config.import=aws-secretsmanager:prod/personalWebsite,aws-secretsmanager:prod/dbCerts
+spring.config.import=aws-secretsmanager:prod/personalWebsite,aws-secretsmanager:prod/dbCerts, aws-secretsmanager:prod/encryptionKey
 database=personalWebsite
 
